# agentshell

./: .gitignore  pyproject.toml
src/agentshell/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  protocol.py  server.py  session.py  tls.py
tests/: test_auth.py  test_config.py  test_e2e.py  test_protocol.py  test_session.py  test_tls.py
